# adk-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
.agents/skills/get-started/: SKILL.md
.agents/skills/google-agents-cli-workflow/: SKILL.md
deep_research_agent/: README.md  agent.py
hybrid_agent/: README.md  agent.py  agent_flows.yaml  flow_schema.py
recursive_agent/: README.md  agent.py
src/adk_playground/: __init__.py
tests/: test_package.py
